--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     text-align: center;
     font-weight: 700;
 
-}*/
+
 
 .n1,
 .n3,
@@ -25,3 +25,192 @@
     font-size: 24px;
     font-weight: bold;
 }
+.div1{
+    background-color: #ff9999;
+    border-style: solid;
+    border-color: blue;
+    margin: 20px;
+    padding: 32px;
+}
+
+.div2{
+    background-color: hsl(182, 76%, 49%);
+    border-style: solid;
+    border-color: rgb(163, 41, 4);
+    margin-bottom: 48px;
+    padding: 0px;
+}
+
+.div3{
+    background-color: hsl(44, 84%, 50%);
+    border-style: solid;
+    border-color: rgb(163, 41, 4);
+    margin-left: 1235px;
+    padding: px;
+    height: auto;
+    width: 600px;
+}
+
+#div1{
+    background-color: hsl(189, 62%, 60%);
+    border-style: solid;
+    border-width: 15px;
+    border-color: rgb(204, 224, 231);
+    margin-top: 20px;
+    margin-bottom: -4px;
+    font-size: 16px;
+    padding: 8px;
+    
+}
+
+#main-container{
+    margin: 0px 350px 0px 350px;
+    /*border-style: solid;
+    border-color: rgb(195, 233, 240);
+    border-width: 15px;
+}
+
+
+.p1{
+    background-color: hsl(189, 62%, 60%);
+    border-style: solid;
+    border-right-width: 15px;
+    border-left-width: 15px;
+    border-color: rgb(204, 224, 231);
+    margin-bottom: -8px;
+    font-size: 16px;
+    padding: 8px;
+    
+}
+
+.p2{
+    background-color: hsl(189, 62%, 60%);
+    border-style: solid;
+    text-align: center;
+    border-width: 15px;
+    border-color: rgb(204, 224, 231);
+    margin-top: -8px;
+    font-size: 16px;
+    padding-top: -8px;
+    
+}
+
+.button{
+font-size: 24px;
+border-style: none;
+margin-top: -15px;
+margin-bottom: 10px;
+padding: 8px 24px 8px 24px;
+}
+
+*/
+/*let's learn flexbox concept*/
+.flex-container {
+    /*display: flex;*/
+    flex-direction: column;
+    
+    
+    
+  }
+
+  
+  /* this selector selects all divs inside of .flex-container */
+  .flex-container div {
+    background: peachpuff;
+    border: 4px solid brown;
+    height: 100px;
+    width: 250px;
+    flex: 1 1 auto;
+  }
+  
+  .flex-container .two {
+    flex-shrink: 0;
+  }
+/*Flex alignment*/
+  .container {
+    height: 140px;
+    padding: 16px;
+    background: plum;
+    border: 4px solid indigo;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    /*justify-content (to align container items horizontally): different properties
+    flex-start, flex-end, center, space-around, space-between
+     space-evenly*/
+  }
+  
+  .item {
+    width: 60px;
+    height: 60px;
+    border: 4px solid darkslategray;
+    background: skyblue;
+    /*flex: 1;*/
+  }
+
+  /*align-items (to align container items vertically): different properties
+  flex-start, flex-end, center, space-around, space-between
+   space-evenly*/
+   .container2  {
+        border: 5px solid #ffcc5c;
+        display: flex;
+        height: 100%;
+        align-items: center;
+        /*justify-content: center;*/
+
+    }
+    .Home{
+        width: 200px;
+        height: 100px;
+        background-color: #57c6f1;
+        color: #eee8db;
+        font-size: 30px;
+        text-align: center;
+        padding-top: 30px;
+        align-self: flex-end;
+    
+    }
+    .Search{
+        width: 200px;
+        height: 100px;
+        background-color: rgb(255, 77, 77);
+        color: #eee8db;
+        font-size: 30px;
+        text-align: center;
+        padding-top: 30px;
+    }
+    .Logout{
+        width: 200px;
+        height: 100px;
+        background-color:#57c6f1;
+        color: #eee8db;
+        font-size: 30px;
+        text-align: center;
+        padding-top: 30px;
+        align-self: flex-start;
+
+    }
+    html, body{
+        height: 100%;
+        
+    }
+
+
+  /*additional resource*/
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  .menu-container {
+    color: #fff;
+    background-color: #5995DA;  /* Blue */
+    padding: 20px 0;
+  }
+  
+  .menu {
+    border: 1px solid #fff;  /* For debugging */
+    width: 900px;
+  }
